Rename example log file for linkspace

--- a/contrib/linkspace.conf
+++ b/contrib/linkspace.conf
@@ -1,7 +1,7 @@
 # Sample rsyslogd config file
 
 # Normal logging
-local0.*                        -/var/log/gads.log
+local0.*                        -/var/log/linkspace.log
 
 # Critical messages (email)
 
