--- a/share/migrations/_source/deploy/26/001-auto.yml
+++ b/share/migrations/_source/deploy/26/001-auto.yml
@@ -5808,7 +5808,7 @@ schema:
           type: FOREIGN KEY
       fields:
         id:
-          data_type: integer
+          data_type: bigint
           default_value: ~
           is_auto_increment: 1
           is_nullable: 0
@@ -5819,7 +5819,7 @@ schema:
           size:
             - 0
         user_id:
-          data_type: integer
+          data_type: bigint
           default_value: ~
           is_nullable: 0
           is_primary_key: 0
