Improve the .gitignore specification
I don't recognise everything here, but I've either simplified rules I'm
familiar with or made them more specific.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
-blib/
+/blib/
 .build/
 _build/
-cover_db/
-inc/
+/cover_db/
+/inc/
 Build
 !Build/
 Build.bat
 .last_cover_stats
-Makefile
-Makefile.old
-MANIFEST.bak
-META.yml
-MYMETA.*
-nytprof.out
+/Makefile
+/Makefile.old
+/META.yml
+/MYMETA.*
+/nytprof.out
 pm_to_blib
-*.swp
-config.yml
+*.sw?
+/config.yml
 _Inline/
 .sass-cache/
 node_modules/
-*.swo
-.vagrant
+/.vagrant
