--- a/package.json
+++ b/package.json
@@ -12,35 +12,38 @@
     "start": "npm-run-all --parallel babel watch ts"
   },
   "dependencies": {
-    "@types/react": "^16.9.1",
-    "@types/react-dom": "^16.8.5",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "awesome-typescript-loader": "^5.2.1",
-    "core-js": "^3.2.0",
-    "css-loader": "^3.2.0",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.5.3",
     "form-serialize": "^0.7.2",
-    "handlebars": "^4.3.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "handlebars": "^4.7.6",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.0",
     "npm-run-all": "^4.1.5",
-    "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.2",
-    "react-dom": "^16.9.0",
-    "react-grid-layout": "^0.16.6",
-    "react-modal": "^3.9.1",
-    "sass": "^1.22.9",
-    "sass-loader": "^7.2.0",
-    "typescript": "^3.5.3",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.13.1",
+    "react-grid-layout": "^0.18.3",
+    "react-modal": "^3.11.2",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "jshint": "^2.9.5",
-    "npm-watch": "^0.2.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-config-problems": "^3.0.1",
-    "eslint-plugin-jsdoc": "^15.9.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "prettier-eslint": "^9.0.0"
+    "jshint": "^2.11.0",
+    "npm-watch": "^0.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-problems": "^4.0.0",
+    "eslint-plugin-jsdoc": "^24.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "@babel/cli": "^7.2.2",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "prettier-eslint": "^9.0.1"
   },
   "watch": {
     "sass": {
