--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "babel": "babel --no-babelrc src/template/index.js --presets=@babel/preset-env --out-file public/js/template.js",
+    "rollup": "rollup --config rollup.config.js",
     "watch": "npm-watch",
     "sass": "sass --update --no-source-map sass:public/css/",
     "jshint": "jshint public/js/*.js",
@@ -37,13 +37,17 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-problems": "^4.0.0",
     "eslint-plugin-jsdoc": "^24.0.0",
     "eslint-plugin-prettier": "^3.1.3",
     "jshint": "^2.11.0",
     "npm-watch": "^0.6.0",
-    "prettier-eslint": "^9.0.1"
+    "prettier-eslint": "^9.0.1",
+    "rollup": "^2.8.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0"
   },
   "watch": {
     "sass": {
