--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-multi-entry": "^3.0.1",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-problems": "^4.0.0",
@@ -46,8 +47,7 @@
     "npm-watch": "^0.6.0",
     "prettier-eslint": "^9.0.1",
     "rollup": "^2.8.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0"
+    "rollup-plugin-babel": "^4.4.0"
   },
   "watch": {
     "sass": {
