--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "npm-watch": "^0.6.0",
     "prettier-eslint": "^9.0.1",
     "rollup": "^2.8.2",
-    "rollup-plugin-babel": "^4.4.0"
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-uglify": "^6.0.4"
   },
   "watch": {
     "sass": {
