Run both webdriver/t scripts as Github actions
This improves our CI test coverage.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,5 +78,4 @@ jobs:
           PGUSER: 'postgres'
         run: ./bin/setup_for_webdriver
       - name: 'Run the Webdriver tests'
-        # TODO: Fix the other webdriver test script and run it here
-        run: prove -lmv webdriver/t/login.t
+        run: prove -lmrsv webdriver/t
