Add standardized page headers

--- a/public/fonts/linkspace-font/config.json
+++ b/public/fonts/linkspace-font/config.json
@@ -579,6 +579,20 @@
       "search": [
         "feedback"
       ]
+    },
+    {
+      "uid": "b9f58017bf3a3a0124201f0b3c916c68",
+      "css": "drag-indicator",
+      "code": 59433,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M109.7 2.6A108.5 108.5 0 0 1 218.2 111.1 108.5 108.5 0 0 1 109.7 219.6 108.5 108.5 0 0 1 1.2 111.1 108.5 108.5 0 0 1 109.7 2.6ZM557.9 0A108.5 108.5 0 0 1 666.4 108.5 108.5 108.5 0 1 1 557.9 0ZM108.6 392.8A108.5 108.5 0 0 1 108.6 609.7 108.5 108.5 0 0 1 108.6 392.8ZM556.4 390.1A108.5 108.5 0 1 1 447.9 498.6 108.5 108.5 0 0 1 556.4 390.1ZM108.5 783.1A108.5 108.5 0 0 1 108.5 1000 108.5 108.5 0 1 1 108.5 783.1ZM556.4 780.3A108.5 108.5 0 1 1 447.9 888.8 108.5 108.5 0 0 1 556.4 780.3Z",
+        "width": 666
+      },
+      "search": [
+        "drag-indicator"
+      ]
     }
   ]
 }
